# firestore-rules-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
examples/: example.rules  example_only_func.rules  example_rules.rules
lsp/: Cargo.toml
lsp/examples/: example.rules
lsp/src/: main.rs
lsp/src/models/: analysis.rs  base.rs  evaluation.rs  extensions.rs  mod.rs
lsp/src/parser/: base.rs  evaluation.rs  extensions.rs  mod.rs  rules_namespace.rs  type_inference.rs  types.rs
lsp/src/provider/: analysis.rs  analysis_doc_symbols.rs  diagnoser.rs  mod.rs  tokenizer.rs
lsp/src/server/: server.rs
lsp/test_lsp_actions/: initialize
src/: main.rs
test-lsp-client/: package-lock.json  package.json  tsconfig.json
tree-sitter-firestore_rules/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-firestore_rules/bindings/c/: tree-sitter-firestore_rules.h  tree-sitter-firestore_rules.pc.in  tree-sitter-firestore_rules_language_parser.pc.in
tree-sitter-firestore_rules/bindings/go/: binding.go  binding_test.go
tree-sitter-firestore_rules/bindings/node/: binding.cc
tree-sitter-firestore_rules/bindings/python/tests/: test_binding.py
tree-sitter-firestore_rules/bindings/python/tree_sitter_firestore_rules/: __init__.py  binding.c
tree-sitter-firestore_rules/bindings/python/tree_sitter_firestore_rules_language_parser/: __init__.py  binding.c
tree-sitter-firestore_rules/bindings/rust/: build.rs  lib.rs
tree-sitter-firestore_rules/bindings/swift/TreeSitterFirestoreRulesLanguageParser/: firestore_rules_language_parser.h
tree-sitter-firestore_rules/bindings/swift/TreeSitterFirestoreRulesLanguageParserTests/: TreeSitterFirestoreRulesLanguageParserTests.swift
tree-sitter-firestore_rules/bindings/swift/TreeSitterFirestoreRulesTests/: TreeSitterFirestoreRulesTests.swift
tree-sitter-firestore_rules/examples/: example.rules
tree-sitter-firestore_rules/src/: grammar.json  node-types.json  parser.c
(+10 files in other folders)
