[package]
name = "firestore-rules-lsp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lsp-server = "0.7.7"
lsp-types = "0.97.0"
serde = "1.0.210"
strum = {version = "0.27.1", features = ["derive"] }
serde_json = "1.0.128"
tree-sitter = "0.25.2"
tree-sitter-firestore-rules = { path = "../tree-sitter-firestore_rules" }