[package]
name = "firestore-rules-lsp"
version = "0.3.0-beta"
edition = "2024"

[build-dependencies]
cc = "*"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = "1.0.219"
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.143"
tree-sitter = "0.25.8"
tree-sitter-firestore-rules = { path = "../tree-sitter-firestore_rules" }
