[package]
name = "firestore-rules-lsp"
version = "0.8.0"
edition = "2024"
rust-version = "1.95"

[build-dependencies]
cc = "*"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = "1.0.228"
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.8"
tree-sitter-firestore-rules = { path = "../tree-sitter-firestore_rules" }
